# sia

./: .gitignore  CONTRIBUTING.md  EVALUATION_GUIDE.md  LICENSE  README.md  environment.yml  prepare.py  pyproject.toml  requirements.txt  task.md
.github/workflows/: ci.yml  publish.yml
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
docs/: configuration.md  harbor.md  walkthrough.md
frontend/: package-lock.json
frontend/scripts/: build-iterations.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/v2/: page.tsx
frontend/src/app/v3/: page.tsx
frontend/src/components/: IterationExperience.tsx
frontend/src/components/iterations/: CarouselTuningControls.tsx  IterationCardFields.tsx  IterationDetailOverlay.tsx  IterationFrame.tsx  IterationTrack.tsx  IterationVisual.tsx  ShaderTile.tsx  StageBackdrop.tsx  StageHeader.tsx  ThomasAttractorPlane.tsx  TuningGate.tsx  data.ts  iterations.generated.ts  thomasAttractor.ts  tuning.ts  types.ts  useIterationScroll.ts  webgl.ts
jonslop/: README.md
jonslop/ideas/: video-prompt-optimization.md
jonslop/research/: IMPL-FINAL-taste-shader.md  IMPL-option1-taste-video.md  IMPL-option3-sidecar.md  TRACK3-reward-faithfulness.md  flow-diagram.html  hackathon-brief.md  how-it-works.html  shader-sia-design.md  sia-framework-notes.md  taste-video-design.md
jonslop/tasks/taste-shader/demo/: DEMO-SCRIPT.md
jonslop/tasks/taste-shader/demo/converge/: viewer.html
jonslop/tasks/taste-shader/demo/converge/live/: best_shader.glsl  log.jsonl  summary.json
jonslop/tasks/taste-shader/demo/converge/run1/: best_shader.glsl  log.jsonl  summary.json
jonslop/tasks/taste-shader/demo/hero_candidates/: hero_1.glsl  hero_2.glsl  hero_3.glsl  hero_4.glsl
jonslop/tasks/taste-shader/reference/: SAMPLE_TASK_DESCRIPTIONS.md  TECHNIQUES.md  reference_target_agent.py  requirements.txt
jonslop/tasks/taste-shader/tools/: classify.py  converge.py  faithfulness_probe.py  fit_taste.py  make_negatives.py  plot_curve.py
orchestration/: context_manager.py  feedback_agent.py  meta_agent.py  orchestrator.py  prepare_mlebench_dataset.py  prepare_sia_dataset.py  util.py
sia/: __init__.py  agent_reference.py  cli.py  config.py  context_manager.py  harbor_agent.py  harbor_runner.py  io_utils.py  layout.py  orchestrator.py  prepare_mlebench_dataset.py  profiles.py  prompts.py  providers.py  run_setup.py  util.py
sia/backends/: __init__.py  base.py  claude.py  openhands.py  pydantic_ai.py
sia/defaults/profiles/: default-meta.json  default-target.json  gptoss-nebius-target.json  kimi-nebius-meta.json  kimi-nebius-target.json  kimi-nebius.json  qwen-nebius-target.json
sia/tasks/: __init__.py
sia/tasks/_shared/: reference_harbor_agent.py
sia/tasks/gpqa/data/public/: diamond_questions.json  task.md
sia/tasks/gpqa/reference/: SAMPLE_TASK_DESCRIPTIONS.md  reference_target_agent.py
sia/tasks/lawbench/data/private/: test.csv
sia/tasks/lawbench/data/training_data/: task.md
sia/tasks/lawbench/reference/: SAMPLE_TASK_DESCRIPTIONS.md  reference_target_agent.py
sia/tasks/longcot-chess/data/private/: answers.json
sia/tasks/longcot-chess/data/public/: chess_hard.json  evaluate.py
sia/tasks/longcot-chess/reference/: reference_target_agent.py
sia/tasks/spaceship-titanic/data/public/: test.csv  train.csv
sia/tasks/spaceship-titanic/reference/: SAMPLE_TASK_DESCRIPTIONS.md
sia/web/: runs.py  server.py
sia/web/static/: index.html
target_agents/: target_agent.py
task_1/private/: prepare.py
task_1/public/: agent.py  baseline.py  eval.py
task_1/target_public/: meta_agent.py
tasks/_shared/: reference_target_agent.py  sample_agent_execution.json
tasks/gpqa/data/private/: diamond_questions.json
tasks/gpqa/data/public/: evaluate.py
tasks/lawbench/data/public/: classes.json  evaluate.py  sample_submission.csv  task.md
tasks/lawbench/data/training_data/: test.csv
tasks/longcot-chess/data/public/: task.md
tasks/longcot-chess/reference/: SAMPLE_TASK_DESCRIPTIONS.md
tasks/spaceship-titanic/data/public/: sample_submission.csv
tasks/spaceship-titanic/reference/: reference_target_agent.py
tasks/task_1/private/: SAMPLE_TASK_DESCRIPTIONS.md
tasks/task_1/public/: task.md  train.py
tests/: test_backends.py  test_cli_interface.py  test_config_injection.py  test_context_golden.py  test_context_manager.py  test_generation_loop.py  test_harbor.py  test_orchestrator_helpers.py  test_profiles.py  test_prompts_snapshot.py  test_task_structure.py  test_web.py
tests/golden/: context.md
(+22 files in other folders)
