[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sia-agent"
version = "0.1.1"
description = "SIA: Self-Improving Auto-researcher — an autonomous AI scientist framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hexo", email = "sia@hexo.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "research", "self-improving", "agents", "science"]
dependencies = [
    "python-dotenv>=1.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.50"]
openhands = ["openhands-ai>=1.6.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.11",
]

[project.urls]
Homepage = "https://github.com/hexo-ai/sia"
Repository = "https://github.com/hexo-ai/sia"

[tool.setuptools.packages.find]
include = ["sia*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B905",  # zip without strict= (python 3.10 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["orchestration"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
not-iterable = "ignore"        # false positive on guarded attribute access
unresolved-import = "warn"     # tests use sys.path manipulation
